# twrpdtgen_v3

./: ANDROID13_VENDOR_BOOT.md  CHANGELOG.md  CHANGES_SUMMARY.md  DEVELOPER_GUIDE.md  pyproject.toml
twrpdtgen_v3/: __init__.py  device_tree.py  main.py
twrpdtgen_v3/proprietary_files/: proprietary_files_list.py
twrpdtgen_v3/templates/: AndroidProducts.mk.jinja2  BoardConfig.mk.jinja2  vendor_ramdisk_Android.mk.jinja2
twrpdtgen_v3/utils/: boot_configuration.py
