[tool.poetry]
name = "twrpdtgen_v3"
version = "3.2.0"
description = "Create an Android device tree from a Firmware dump using dumpyara"
authors = ["Biraru <biraruyt@gmail.com>", "Sebastiano Barezzi <seba@sebaubuntu.dev>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/xXHenneBXx/twrpdtgen_v3"

[tool.poetry.scripts]
twrpdtgen_v3 = 'twrpdtgen_v3.main:main'

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.1.2"
GitPython = "^3.1.31"
sebaubuntu-libs = "^1.4.4"
 
[poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.1.1"]
build-backend = "poetry.core.masonry.api"
